--- a/WinFormsDownloadList/WinFormsUI/WinFormsUI.csproj
+++ b/WinFormsDownloadList/WinFormsUI/WinFormsUI.csproj
@@ -52,6 +52,7 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormMain.resx">
