--- a/WinFormsDownloadList/WinFormsUI/WinFormsUI.csproj
+++ b/WinFormsDownloadList/WinFormsUI/WinFormsUI.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DownloadService.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
