chore: комментарии в коде

--- a/WinFormsDownloadList/WinFormsUI/WinFormsUI.csproj
+++ b/WinFormsDownloadList/WinFormsUI/WinFormsUI.csproj
@@ -52,7 +52,7 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\InputView.cs" />
+    <Compile Include="Models\InputViewModel.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
