--- a/WindowsFormsListBox/WindowsFormsListBox/WindowsFormsListBox.csproj
+++ b/WindowsFormsListBox/WindowsFormsListBox/WindowsFormsListBox.csproj
@@ -46,14 +46,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormInputProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormInputProduct.Designer.cs">
+      <DependentUpon>FormInputProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormInputProduct.resx">
+      <DependentUpon>FormInputProduct.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
