--- a/WindowsFormsListBox/WindowsFormsListBox/WindowsFormsListBox.csproj
+++ b/WindowsFormsListBox/WindowsFormsListBox/WindowsFormsListBox.csproj
@@ -64,6 +64,9 @@
     <EmbeddedResource Include="FormInputProduct.resx">
       <DependentUpon>FormInputProduct.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
