feat(Person): модель и отображение окна ввода

--- a/WindowsFormsDataTransfer/WindowsFormsApp/WindowsFormsApp.csproj
+++ b/WindowsFormsDataTransfer/WindowsFormsApp/WindowsFormsApp.csproj
@@ -58,6 +58,7 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormInput.resx">
